[fix] Fixed compiling process for java 16